Fixed column balancing issue

--- a/reproducibilityCACM.tex
+++ b/reproducibilityCACM.tex
@@ -152,6 +152,6 @@ journals, journals in some other sensible ranking).
 % latex bibtex latex latex (in that particular order) in order to resolve all the 'numerical values'
 % be they for figures, equation numbers, references, footnotes, etc. etc.
 %
-\balancecolumns
+%\balancecolumns
 % That's all folks! % GM Sept. 2008
 \end{document}
