--- a/reproducibilityCACM.tex
+++ b/reproducibilityCACM.tex
@@ -50,7 +50,7 @@
 %\crdata{0001-0782/08/0X00}  % Allows default copyright data (0001-0782/08/0X00) to be over-ridden - IF NEED BE.
 % --- End of Author Metadata ---
 
-\title{Reproducibility Studies
+\title{Reproducibility Studies in Computational Sciences
 % \titlenote{(This is a simple titlenote.)For use with research4cacm.cls. Supported by ACM.}
 %
 % Show use of \thanks - which can appear here (normal/default) or down by the author
@@ -130,6 +130,80 @@ paper. Should be sensible and reasonable sized sample (e.g. all ACM
 journals, journals in some other sensible ranking).
 
 (cite to check bib~\cite{crick-et-al_wssspe2})
+
+\section*{Bullet Points}
+
+\begin{itemize}
+
+
+\item initiatives in other disciplines (Cardiff person?) pre-registration?
+\item Positive results may be unpublishable!   
+
+\item Reproducibility
+
+\item Culture Change 
+\item Incentives.  
+
+\item Feeling a fraud as open stuff... true across the field.  E.g. we trust resutls from others and reproduce things.
+
+\item cf dissemination model is broken... impending crisis
+
+\item E.g. give examples of ourselves.   ICLP 09?  Ian can find lots, honest!
+
+\item Examples of tracks applications ... 
+
+\item part of core phd skills training
+\item instead of giving a student 100 papers to read and write a literature review, give them one and write a reproducibility studies
+\item thinking of Ian Miguel and Lars Kotthoff, got journal papers out of lit reviews
+\item Ian's first paper about counterfactuals
+
+
+
+
+
+\item Example of good journals
+\begin{itemize}
+\item Springer?
+\item IPOL
+\item
+Journal 2010-2012
+Never published a paper!
+Folded into Code 
+http://www.scfbm.org/content/pdf/1751-0473-7-2.pdf
+
+\item reproducibility project in psychology?
+
+\item thing where people reproduced old papers.  (repo 
+
+\end{itemize}
+
+
+
+\end{itemize}
+
+\section{ Review standards }
+
+Make a particular proposal. 
+
+Reproducibility is broad ... 
+
+
+Quality of work and paper is AIJ quality
+Novelty not assessed in normal way
+Originality is in study of reproducibility of some major piece of AI
+Could expose flaws in conventional wisdom if original experiments not reproducible
+Could show that conventional wisdom is completely correct 
+Either way community has solid basis for understanding 
+Often expect new critical insights e.g. on importance of neglected implementation issues
+Paper itself should have very high standard of reproducibility
+Compare survey paper:
+Novelty not assessed in normal way
+Likely to improve understanding through selection, presentation, and new insights
+
+\section{What's next?}
+
+Post this to lots of people
+
 
 %ACKNOWLEDGMENTS are optional
 %\section{Acknowledgments}
