Tweaks and changes to CACM paper, added refs, some reorganisation

--- a/reproducibilityCACM.bib
+++ b/reproducibilityCACM.bib
@@ -3,5 +3,13 @@
   title = {{``Can I Implement Your Algorithm?'': A Model for Reproducible Research Software}},
   booktitle = {{Proceedings of 2nd International Workshop on Sustainable Software for Science: Practice and Experiences (WSSSPE2)}},
   year = {2014},
-  note = {(submitted, under review)}
+  note = {(accepted, to appear)}
+}
+
+@INPROCEEDINGS{crick-et-al_recomp2014,
+  author = {Tom Crick and Benjamin A. Hall and Samin Ishtiaq and Kenji Takeda},
+  title = {{``Share and Enjoy'': Publishing Useful and Usable Scientific Models}},
+  booktitle = {{Proceedings of 1st International Workshop on Recomputability}},
+  year = {2014},
+  note = {(accepted, to appear)}
 }
