--- a/reproducibilityCACM.tex
+++ b/reproducibilityCACM.tex
@@ -7,7 +7,7 @@
 
 \begin{document}
 
-\title{We Need to Talk About Reproducibility in Computational Science...}
+\title{We Need to Talk About Reproducibility in Computing Science...}
 
 \author[1]{Tom Crick}
 \author[2]{Benjamin A. Hall}
