Updated bib and added some signposting

--- a/reproducibilityCACM.bib
+++ b/reproducibilityCACM.bib
@@ -1,15 +1,596 @@
+@article{vardi-cacm-2009,
+  author =       {Moshe Y. Vardi},
+  title =        {{Open, Closed, or Clopen Access?}},
+  journal =      {{Communications of the ACM}},
+  volume =       {52},
+  number =       {7},
+  year =         {2009}
+} 
+
 @INPROCEEDINGS{crick-et-al_wssspe2,
-  author = {Tom Crick and Benjamin A. Hall and Samin Ishtiaq},
-  title = {{``Can I Implement Your Algorithm?'': A Model for Reproducible Research Software}},
-  booktitle = {{Proceedings of 2nd International Workshop on Sustainable Software for Science: Practice and Experiences (WSSSPE2)}},
-  year = {2014},
-  note = {(accepted, to appear)}
+  author =       {Tom Crick and Benjamin A. Hall and Samin Ishtiaq},
+  title =        {{``Can I Implement Your Algorithm?'': A Model for Reproducible Research Software}},
+  booktitle =    {{Proceedings of 2nd International Workshop on Sustainable Software for Science: Practice and Experiences (WSSSPE2)}},
+  year =         {2014}
 }
 
 @INPROCEEDINGS{crick-et-al_recomp2014,
-  author = {Tom Crick and Benjamin A. Hall and Samin Ishtiaq and Kenji Takeda},
-  title = {{``Share and Enjoy'': Publishing Useful and Usable Scientific Models}},
-  booktitle = {{Proceedings of 1st International Workshop on Recomputability}},
-  year = {2014},
-  note = {(accepted, to appear)}
+  author =       {Tom Crick and Benjamin A. Hall and Samin Ishtiaq and Kenji Takeda},
+  title =        {{``Share and Enjoy'': Publishing Useful and Usable Scientific Models}},
+  booktitle =    {{Proceedings of 1st International Workshop on Recomputability}},
+  year =         {2014}
+}
+
+@Unpublished{gent:2013,
+  author = 	 {Ian P. Gent},
+  title = 	 {{The Recomputation Manifesto}},
+  note = 	 {Available from: \url{http://arxiv.org/abs/1304.3674}},
+  month = 	 {April},
+  year = 	 {2013}
+}
+
+@Article{stodden-et-al:2013,
+  author = 	 {Victoria Stodden and Peixuan Guo and Zhaokun Ma},
+  title = 	 {{Toward Reproducible Computational Research: An Empirical Analysis of Data and Code Policy Adoption by Journals}},
+  journal = 	 {{PLoS ONE}},
+  year = 	 {2013},
+  volume = 	 {8},
+  number = 	 {6}
+}
+
+@Article{sandve-et-al:2013,
+  author = 	 {{Geir Kjetil} Sandve and Anton Nekrutenko and James Taylor and Eivind Hovig},
+  title = 	 {{Ten Simple Rules for Reproducible Computational Research}},
+  journal = 	 {{PLoS Computational Biology}},
+  year = 	 {2013},
+  volume = 	 {9},
+  number = 	 {10}
+}
+
+@InProceedings{fursin+dubach:2014,
+  author = 	 {Grigori Fursin and Christophe Dubach},
+  title = 	 {{Community-Driven Reviewing and Validation of Publications}},
+  booktitle =    {{Proceedings of the 1st ACM SIGPLAN Workshop on Reproducible Research Methodologies and New Publication Models in Computer Engineering (TRUST'14)}},
+  pages = 	 {1--4},
+  year = 	 {2014},
+  publisher =    {ACM Press}
+}
+
+@Article{chambers-et-al:2014,
+  author = 	 {Christopher D. Chambers and Eva Feredoes and Suresh D. Muthukumaraswamy and Peter J. Etchells},
+  title = 	 {{Instead of ``playing the game'' it is time to change the rules: Registered Reports at AIMS Neuroscience and beyond}},
+  journal = 	 {{AIMS Neuroscience}},
+  year = 	 {2014},
+  volume = 	 {1},
+  number = 	 {1},
+  pages = 	 {4--17}
+}
+
+@Inproceedings {cook-et-al:2014,
+  author       = {Byron Cook and Jasmin Fisher and Benjamin A. Hall and Samin Ishtiaq and Garvit Juniwal and Nir Piterman},
+  booktitle    = {{Proceedings of the 26th International Conference on Computer Aided Verification (CAV 2014)}},
+  title        = {Finding instability in biological models},
+  year         = {2014}
+}
+
+@Article{ofria+wilke:2004,
+  author = 	 {Charles Ofria and Claus O. Wilke},
+  title = 	 {{Avida: A Software Platform for Research in Computational Evolutionary Biology}},
+  journal = 	 {{Artificial Life}},
+  year = 	 {2004},
+  volume = 	 {10},
+  number = 	 {2},
+  pages = 	 {191--229}
+}
+
+@Article{rollins-et-al:2014,
+  author = 	 {Nathan D. Rollins and C. Michael Barton and Sean Bergin and Marco A. Janssen and Allen Lee},
+  title = 	 {{A Computational Model Library for publishing model documentation and code}},
+  journal = 	 {{Environmental Modelling \& Software}},
+  year = 	 {2014},
+  volume = 	 {61},
+  pages = 	 {59--64}
+}
+
+@Article{conte-et-al:2012,
+  author = 	 {R. Conte and N. Gilbert and G. Bonelli and C. Cioffi-Revilla and G. Deffuant and J. Kertesz and V. Loreto and S. Moat and J-P. Nadal and A. Sanchez and A. Nowak and A. Flache and M. San Miguel and D. Helbing},
+  title = 	 {{Manifesto of Computational Social Science}},
+  journal = 	 {{The European Physical Journal Special Topics}},
+  year = 	 {2012},
+  volume = 	 {214},
+  number = 	 {1},
+  pages = 	 {325--346}
+}
+
+@Article{rssaaoe:2012,
+  author = 	 {{Royal Society}},
+  title = 	 {Science as an open enterprise},
+  year = 	 {2012},
+  note = 	 {Available from: \url{https://royalsociety.org/policy/projects/science-public-enterprise/report/}}
+}
+
+@Article{wilson-et-al:2014,
+  author = 	 {Greg Wilson and D. A. Aruliah and {C. Titus} Brown and Neil P. {Chue Hong} and Matt Davis and Richard T. Guy and Steven H. D. Haddock and Kathryn D. Huff and Ian M. Mitchell and Mark D. Plumbley and Ben Waugh and Ethan P. White and Paul Wilson},
+  title = 	 {{Best Practices for Scientific Computing}},
+  journal = 	 {{PLoS Biology}},
+  year = 	 {2014},
+  volume = 	 {12},
+  number = 	 {1}
+}
+
+@Proceedings{crick+chuehong:2014,
+  year = 	 {2014},
+  title =        {{Proceedings of the 1st International Workshop on Recomputability}},
+  editor = 	 {Tom Crick and Neil P. {Chue Hong}},
+  publisher =    {IEEE Press},
+  note = 	 {\url{http://recomputability.researchcomputing.org.uk/}}
+}
+
+@Article{stern-et-al:2014,
+  author = 	 {Andrew M. Stern and Arturo Casadevall and R. Grant Steen and C. Ferric Fang},
+  title = 	 {Financial costs and personal consequences of research misconduct resulting in retracted publications},
+  journal = 	 {{eLife}},
+  year = 	 {2014},
+  volume = 	 {3}
+}
+
+@Article{walfish+blumberg:2015,
+  author = 	 {Michael Walfish and Andrew J. Blumberg},
+  title = 	 {{Verifying Computations without Reexecuting Them}},
+  journal = 	 {{Communications of the ACM}},
+  volume = 	 {58},
+  number = 	 {2},
+  pages = 	 {74--84}
+}
+
+@Article{peng:2011,
+  author = 	 {Roger D. Peng},
+  title = 	 {{Reproducible Research in Computational Science}},
+  journal = 	 {Science},
+  year = 	 {2011},
+  volume = 	 {334},
+  number = 	 {6060},
+  pages = 	 {1226--1227}
+}
+
+@Inproceedings {benque-et-al:2012,
+  author       = {David Benque and Sam Bourton and Caitlin Cockerton and Byron Cook and Jasmin Fisher and Samin Ishtiaq and Nir Piterman and Alex Taylor and Moshe Y. Vardi},
+  booktitle    = {{Proceedings of the 24th International Conference on Computer Aided Verification (CAV 2012)}},
+  title        = {{BMA: Visual Tool for Modeling and Analyzing Biological Networks}},
+  year         = {2012}
+}
+
+@Inproceedings {cook-et-al:2011,
+  author       = {Byron Cook and Jasmin Fisher and Elzbieta Krepska and Nir Piterman},
+  booktitle    = {{Proceedings of the 12th International Conference on Verification, Model Checking and Abstract Interpretation (VMCAI'11)}},
+  title        = {{Proving stabilization of biological systems}},
+  year         = {2011}
+}
+
+@Unpublished{arabas-et-al:2014,
+  author = 	 {Michael R. Bareford and Lakshitha R. de Silva and Ian P. Gent and Benjamin M. Gorman and Masih Hajiarabderkani and Tristan Henderson and Luke Hutton and Alexander Konovalov and Lars Kotthoff and Ciaran McCreesh and Miguel A. Nacenta and Ruma R. Paul and Karen E. J. Petrie and Abdul Razaq and Dani\"{e}l Reijsbergen and Kenji Takeda},
+  title = 	 {{Case Studies and Challenges in Reproducibility in the Computational Sciences}},
+  note = 	 {Available from: \url{http://arxiv.org/abs/1408.2123}},
+  month = 	 {April},
+  year = 	 {2014}
+}
+
+@Inproceedings {claessen-et-al:2013,
+  author       = {Koen Claessen and Jasmin Fisher and Samin Ishtiaq and Nir Piterman and Qinsi Wang},
+  booktitle    = {{Proceedings of the 25th International Conference on Computer Aided Verification (CAV 2013)}},
+  title        = {{Model-Checking Signal Transduction Networks through Decreasing Reachability Sets}},
+  year         = {2013}
+}
+
+@article{vardi-cacm-2014,
+  author =       {Moshe Y. Vardi},
+  title =        {{Openism, IPism, Fundamentalism, and Pragmatism}},
+  journal =      {{Communications of the ACM}},
+  volume =       {57},
+  number =       {8},
+  year =         {2014}
+} 
+
+@Unpublished{crick-et-al-cav,
+  author =       {Tom Crick and Benjamin A. Hall and Samin Ishtiaq},
+  title =        {{Dear CAV, We Need to Talk About Reproducibility}},
+  note = 	 {Available from: \url{http://arxiv.org/abs/1502.02448}},
+  month = 	 {February},
+  year =         {2015}
+}
+
+@Unpublished{chuehong-et-al:2015,
+  author = 	 {Neil P. {Chue Hong} and Tom Crick and Ian P. Gent and Lars Kotthoff and Kenji Takeda},
+  title = 	 {{Top Tips to Make Your Research Irreproducible}},
+  note = 	 {Available from: \url{http://arxiv.org/abs/1504.00062}},
+  month = 	 {April},
+  year = 	 {2015}
+}
+
+@article{prlic+procter:2012,
+  author =      {Andreas Prli\'{c} and James B. Procter},
+  journal =     {{PLoS Computational Biology}},
+  number =      {8},
+  title =       {{Ten Simple Rules for the Open Development of Scientific Software}},
+  volume =      {12},
+  year =        {2012}
+}
+
+@Article{goble:2014,
+  author = 	 {Carole Goble},
+  title = 	 {{Better Software, Better Research}},
+  journal = 	 {{IEEE Internet Computing}},
+  year = 	 {2014},
+  volume = 	 {18},
+  number = 	 {5},
+  pages = 	 {4--8}
+}
+
+@Article{stodden+miguez:2014,
+  author = 	 {Victoria Stodden and Sheila Miguez},
+  title = 	 {{Best Practices for Computational Science: Software Infrastructure and Environments for Reproducible and Extensible Research}},
+  journal = 	 {{Journal of Open Research Software}},
+  year = 	 {2014},
+  volume = 	 {2},
+  number = 	 {1},
+  pages = 	 {1--6}
+}
+
+@INPROCEEDINGS{gent+kotthoff:2014,
+  author =       {Ian P. Gent and Lars Kotthoff},
+  title =        {{Recomputation.org: Experience of Its First Year and Lessons Learned}},
+  booktitle =    {{Proceedings of 1st International Workshop on Recomputability}},
+  year =         {2014}
+}
+
+@Unpublished{parolo-et-al:2015,
+  author = 	 {Pietro {Della Briotta Parolo} and Raj {Kumar Pan} and Rumi Ghosh and Bernardo A. Huberman and Kimmo Kaski and Santo Fortunato},
+  title = 	 {{Attention decay in science}},
+  note = 	 {Available from: \url{http://arxiv.org/abs/1503.01881}},
+  month = 	 {March},
+  year = 	 {2015}
+}
+
+@Misc{hr4012:2014,
+  author = 	 {{US House of Representatives}},
+  title = 	 {{Secret Science Reform Act}},
+  howpublished = {\url{https://www.congress.gov/bill/113th-congress/house-bill/4012}},
+  month = 	 {November},
+  year = 	 {2014},
+  note = 	 {{H.R.4012, 113th Congress}}
+}
+
+@Article{barnes:2010,
+  author = 	 {Nick Barnes},
+  title = 	 {Publish your computer code: it is good enough},
+  journal = 	 {Nature},
+  year = 	 {2010},
+  volume = 	 {467},
+  number = 	 {753}
+}
+
+@article{morin-et-al:2012,
+  author =       {Morin, A. and Urban, J. and Adams, P. D. and Foster, I. and Sali, A. and Baker, D. and Sliz, P.}, 
+  title =        {{Shining Light into Black Boxes}},
+  volume =       {336}, 
+  number =       {6078}, 
+  pages =        {159--160}, 
+  year =         {2012}, 
+  journal =      {Science} 
+}
+
+@Article{joppa-et-al:2013,
+  author = 	 {Lucas N. Joppa and Greg McInerny and Richard Harper and Lara Salido and Kenji Takeda and Kenton O'Hara and David Gavaghan and Stephen Emmott},
+  title = 	 {{Troubling Trends in Scientific Software Use}},
+  journal = 	 {Science},
+  year = 	 {2013},
+  volume = 	 {340},
+  number = 	 {6134},
+  pages = 	 {814--815}
+}
+
+@Article{osherovich:2011,
+  author = 	 {Lev Osherovich},
+  title = 	 {{Hedging against academic risk}},
+  journal = 	 {{Science-Business eXchange}},
+  year = 	 {2011},
+  volume = 	 {4},
+  number = 	 {15}
+}
+
+@Article{bechhofer-et-al:2013,
+  author = 	 {Sean Bechhofer and Iain Buchan and David {De Roure} and Paolo Missier and John Ainsworth and Jiten Bhagata and Philip Couch and Don Cruickshank and Mark Delderfield and Ian Dunlop and Matthew Gamble and Danius Michaelides and Stuart Owen and David Newman and Shoaib Sufi and Carole Goble},
+  title = 	 {{Why linked data is not enough for scientists}},
+  journal = 	 {{Future Generation Computer Systems}},
+  year = 	 {2013},
+  volume = 	 {29},
+  number = 	 {2},
+  pages = 	 {599--611}
+}
+
+@INPROCEEDINGS{crick-et-al:2009a,
+  author =       {Tom Crick and Marina {De Vos} and Martin Brain and John Fitch},
+  title =        {{Generating Optimal Code using Answer Set Programming}},
+  booktitle =    {{Proceedings of 10th International Conference on Logic Programming and Nonmonotonic Reasoning (LPNMR'09)}},
+  year =         {2009},
+  volume =       {5753},
+  series =       {Lecture Notes in Computer Science},
+  pages =        {554--559},
+  publisher =    {Springer}
+}
+
+@ARTICLE{crick-et-al:2009b,
+  author =       {Tom Crick and Peter Dunning and Hyunsun Kim and Julian Padget},
+  title =        {{Engineering Design Optimization using Services and Workflows}},
+  journal =      {{Philosophical Transactions of the Royal Society A}},
+  year =         {2009},
+  volume =       {367},
+  pages =        {2741--2751},
+  number =       {1898}
+}
+
+@INPROCEEDINGS{berdine-et-al:2011, 
+  author    = {Josh Berdine and Byron Cook and Samin Ishtiaq},
+  title     = {{SLAyer: Memory Safety for Systems-Level Code}},
+  booktitle = {{Proceedings of the 23rd International Conference on Computer Aided Verification (CAV 2011)}},
+  year      = {2011},
+  publisher = {Springer},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {6806},
+  pages     = {178--183}
+}
+
+@Article{nature:2011,
+  author = 	 {Editorial},
+  title = 	 {Devil in the details},
+  journal = 	 {Nature},
+  year = 	 {2011},
+  volume = 	 {470},
+  number = 	 {7334},
+  pages =        {305--306}
+}
+
+@InProceedings{oabarriaga-et-al:2014,
+  author = 	 {S. Olabarriaga and G. Pierantoni and G. Taffoni and E. Sciacca and M. Jaghoori and V. Korkhov and G. Castelli and C. Vuerli and U. Becciani and E. Carley and B. Bentley},
+  title = 	 {{Scientific Workflow Management -- For Whom?}},
+  booktitle =    {{Proceedings of 10th IEEE International Conference on e-Science (e-Science 2014)}},
+  year = 	 {2014},
+  pages = 	 {298--305},
+  publisher =    {{IEEE Press}}
+}
+
+@TechReport{collberg-et-al:2014,
+  author = 	 {Christian Collberg and Todd Proebsting and Gina Moraila and Akash Shankaran and Zuoming Shi and Alex M. Warren},
+  title = 	 {{Measuring Reproducibility in Computer Systems Research}},
+  institution =  {Department of Computer Science, University of Arizona},
+  year = 	 {2014}
+}
+
+@TechReport{collberg-et-al:2015,
+  author = 	 {Christian Collberg and Todd Proebsting and Alex M. Warren},
+  title = 	 {{Repeatability and Benefaction in Computer Systems Research: A Study and a Modest Proposal}},
+  institution =  {Department of Computer Science, University of Arizona},
+  number =       {TR 14-04},
+  year = 	 {2014}
+}
+
+@Article{stodden-et-al:2015,
+  author = 	 {Victoria Stodden and Sheila Miguez and Jennifer Seiler},
+  title = 	 {{ResearchCompendia.org: Cyberinfrastructure for Reproducibility and Collaboration in Computational Science}},
+  journal = 	 {{Computing in Science \& Engineering}},
+  year = 	 {2015},
+  volume = 	 {17},
+  number = 	 {12}
+}
+
+@Article{chirigati-et-al:2013,
+  author = 	 {{Fernando Seabra} Chirigati and Matthias Troyer and Dennis Shasha and Juliana Freire},
+  title = 	 {{A Computational Reproducibility Benchmark}},
+  journal = 	 {{IEEE Data Engineering Bulletin}},
+  year = 	 {2013},
+  volume = 	 {36},
+  number = 	 {4},
+  pages = 	 {54--59}
+}
+
+@Article{fursin-et-al:2014,
+  author = 	 {Grigori Fursin and Renato Miceli and Anton Lokhmotov and Michael Gerndt and Marc Baboulin and Allen D. Malony and Zbigniew Chamski and Diego Novillo and Davide {Del Vento}},
+  title = 	 {{Collective mind: Towards practical and collaborative auto-tuning}},
+  journal = 	 {{Scientific Programming}},
+  year = 	 {2014},
+  volume = 	 {22},
+  number = 	 {4},
+  pages = 	 {309--329}
+}
+
+@Article{thiele+grimm:2015,
+  author = 	 {Jan C. Thiele and Volker Grimm},
+  title = 	 {{Replicating and breaking models: good for you and good for ecology}},
+  journal = 	 {{Oikos}},
+  year = 	 {2015},
+  month = 	 {March},
+  note = 	 {\url{http://onlinelibrary.wiley.com/doi/10.1111/oik.02170/abstract}}
+}
+
+@InProceedings{ledet-et-al:2014,
+  author = 	 {Joseph Ledet and Alejandro Teran-Somohano and Zachary Butcher and Levent Yilmaz and Alice E. Smith and Halit O\u{g}uzt\"{u}z\"{u}n and Or\c{c}un Dayiba\c{s} and {Bilge Kaan} G\"{o}r\"{u}},
+  title = 	 {{Toward model-driven engineering principles and practices for model replicability and experiment reproducibility}},
+  booktitle =    {{Proceedings of the 2014 Symposium on Theory of Modeling \& Simulation (DEVS'14)}},
+  year = 	 {2014},
+  pages = 	 {1--8},
+  publisher =    {{Society for Computer Simulation International}}
+}
+
+@InProceedings{vitek+kalibera:2011,
+  author = 	 {Jan Vitek and Tomas Kalibera},
+  title = 	 {{Repeatability, Reproducibility, and Rigor in Systems Research}},
+  booktitle = {{Proceedings of the 9th ACM International Conference on Embedded Software (EMSOFT'11)}},
+  year = 	 {2011},
+  pages = 	 {33--38},
+  publisher = {{ACM Press}}
+}
+
+@Article{mesirov:2010,
+  author = 	 {Jill P. Mesirov},
+  title = 	 {{Accessible Reproducible Research}},
+  journal = 	 {Science},
+  year = 	 {2010},
+  volume = 	 {327},
+  number = 	 {5964},
+  pages = 	 {415--416}
+}
+
+@Article{huang+gottardo:2013,
+  author = 	 {Yunda Huang and Raphael Gottardo},
+  title = 	 {{Comparability and reproducibility of biomedical data}},
+  journal = 	 {Science},
+  year = 	 {2013},
+  volume = 	 {14},
+  number = 	 {4},
+  pages = 	 {391--401}
+}
+
+@Unpublished{crick-et-al:2015,
+  author = 	 {Tom Crick and Samin Ishtiaq and Benjamin A. Hall},
+  title = 	 {{Towards ``Reproducibility-as-a-Service''}},
+  note = 	 {Available from: \url{http://arxiv.org/abs/1503.02388}},
+  month = 	 {March},
+  year = 	 {2015}
+}
+
+@Article{koop-et-al:2011,
+  author = 	 {David Koop and Emanuele Santos and Phillip Mates and Huy T. Vo and Philippe Bonnet and Bela Bauer and Brigitte Surer and Matthias Troyer and Dean N. Williams and Joel E. Tohline and Juliana Freire and Cl\'{a}udio T. Silva},
+  title = 	 {{A Provenance-Based Infrastructure to Support the Life Cycle of Executable Papers}},
+  journal = 	 {{Procedia Computer Science}},
+  year = 	 {2011},
+  volume = 	 {4},
+  pages = 	 {648--657}
+}
+
+@InProceedings{davidson+freire:2008,
+  author = 	 {Susan B. Davidson and Juliana Freire},
+  title = 	 {{Provenance and scientific workflows: challenges and opportunities}},
+  booktitle = {{Proceedings of the 2008 ACM SIGMOD International Conference on Management of Data}},
+  year = 	 {2008},
+  pages = 	 {1345--1350},
+  publisher = {{ACM Press}}
+}
+
+@Article{santer-et-al:2011,
+  author = 	 {B. D. Santer and T. M. L. Wigley and K. E. Taylor},
+  title = 	 {{The Reproducibility of Observational Estimates of Surface and Atmospheric Temperature Change}},
+  journal = 	 {Science},
+  year = 	 {2011},
+  volume = 	 {334},
+  number = 	 {6060},
+  pages = 	 {1232--1233}
+}
+
+@Article{peng-et-al:2006,
+  author = 	 {Roger D. Peng and Francesca Dominici and Scott L. Zeger},
+  title = 	 {{Reproducible Epidemiologic Research}},
+  journal = 	 {{American Journal of Epidemiology}},
+  year = 	 {2006},
+  volume = 	 {163},
+  number = 	 {9},
+  pages = 	 {783--789}
+}
+
+@Article{koenker+zeileis:2009,
+  author = 	 {Roger Koenker and Achim Zeileis},
+  title = 	 {{On reproducible econometric research}},
+  journal = 	 {{Journal of Applied Econometrics}},
+  year = 	 {2009},
+  volume = 	 {24},
+  number = 	 {5},
+  pages = 	 {833--847}
+}
+
+@Article{schwab-et-al:2000,
+  author = 	 {M. Schwab and N. Karrenbach and J. Claerbout},
+  title = 	 {{Making scientific computations reproducible}},
+  journal = 	 {{Computing in Science \& Engineering}},
+  year = 	 {2000},
+  volume = 	 {2},
+  number = 	 {6},
+  pages = 	 {61--67}
+}
+
+@Article{price:1986,
+  author = 	 {Keith Price},
+  title = 	 {{Anything you can do, I can do better (No you can't)...}},
+  journal = 	 {{Computer Vision, Graphics, and Image Processing}},
+  year = 	 {2000},
+  volume = 	 {36},
+  number = 	 {2-3},
+  pages = 	 {387--391}
+}
+
+@Misc{pantonprinciples:2010,
+  author = 	 {Peter Murray-Rust and Cameron Neylon and Rufus Pollock and John Wilbanks},
+  title = 	 {{Panton Principles, Principles for open data in science}},
+  howpublished = {\url{http://pantonprinciples.org/}},
+  month = 	 {February},
+  year = 	 {2010}
+}
+
+@InProceedings{sim-et-al:2003,
+  author = 	 {(Susan Elliott) Sim and Steve Easterbrook and Richard C. Holt},
+  title = 	 {{Using Benchmarking to Advance Research: A Challenge to Software Engineering}},
+  booktitle =    {{Proceedings of the 25th International Conference on Software Engineering (ICSE'03)}},
+  year = 	 {2003},
+  pages = 	 {74--83},
+  publisher =    {{IEEE Press}}
+}
+
+@Article{feitelson:2015,
+  author = 	 {Dror G. Feitelson},
+  title = 	 {{From Repeatability to Reproducibility and Corroboration}},
+  journal = 	 {{ACM SIGOPS Operating Systems Review}},
+  year = 	 {2015},
+  volume = 	 {49},
+  number = 	 {1},
+  pages = 	 {3--1},
+  note =         {{Special Issue on Repeatability and Sharing of Experimental Artifacts}}
+}
+
+@Misc{deroure:2010,
+  author = 	 {David {De Roure}},
+  title = 	 {{Replacing the Paper: The Twelve Rs of the e-Research Record}},
+  howpublished = {\url{http://www.scilogs.com/eresearch/replacing-the-paper-the-twelve-rs-of-the-e-research-record/}},
+  month = 	 {November},
+  year = 	 {2011}
+}
+
+@Book{hey:2009,
+  editor = 	 {Tony Hey and Stewart Tansley and Kristin Tolle},
+  title = 	 {{The Fourth Paradigm: Data-Intensive Scientific Discovery}},
+  publisher = 	 {{Microsoft Research}},
+  year = 	 {2009}
+}
+
+@Article{vardi-cacm-2010,
+  author =       {Moshe Y. Vardi},
+  title =        {{Science Has Only Two Legs}},
+  journal =      {{Communications of the ACM}},
+  volume =       {53},
+  number =       {9},
+  year =         {2010}
+} 
+
+@Article{orchard+rice:2014,
+  author = 	 {Dominic Orchard and Andrew Rice},
+  title = 	 {{A Computational Science Agenda for Programming Language Research}},
+  journal = 	 {{Procedia Computer Science}},
+  year = 	 {2014},
+  volume = 	 {29},
+  pages = 	 {713--727}
+}
+
+@INPROCEEDINGS{crick-et-al_escience,
+  author =       {Tom Crick and Benjamin A. Hall and Samin Ishtiaq},
+  title =        {{Reproducibility as a Technical Specification}},
+  booktitle =    {{10th IEEE International Conference on eScience (eScience 2015)}},
+  year =         {2015},
+  note =         {(submitted, under review)}
 }
