--- a/reproducibilityCACM.tex
+++ b/reproducibilityCACM.tex
@@ -46,12 +46,25 @@ reproducibility papers.
 \end{abstract}
 
 
-\section*{Deadlines}
+% \section*{Deadlines}
+% \begin{compactdesc}
+% \item[15 Nov:] Digital Science Catalyst Grant
+% \item[15 Dec:] Microsoft Azure for Research Initiative Grant
+% \item[30 Dec:] Send CACM paper to Moshe
+% \item[30 Jan:] CAV 2015
+% \end{compactdesc}
+
+\section*{Previous papers on which to build...}
 \begin{compactdesc}
-\item[15 Nov:] Digital Science Catalyst Grant
-\item[15 Dec:] Microsoft Azure for Research Initiative Grant
-\item[30 Dec:] Send CACM paper to Moshe
-\item[30 Jan:] CAV 2015
+\item[WSSSPE2:] Accepted and presented in Nov~\cite{crick-et-al_wssspe2};
+\item[Recomputability 2014:] Accepted and presented in Dec~\cite{crick-et-al_recomp2014};
+\item[CAV 2015:] Rejected, but template for CS
+  conference~\cite{crick-et-al-cav};
+\item[JORS:] Submitted -- updated invited submission from WSSSPE2
+  paper~\cite{crick-et-al:2015};
+\item[IEEE eScience 2015:] Submitted -- tweaked and generalised CAV
+  paper~\cite{crick-et-al_escience};
+\item[Irreprodubibility:] 1st April fun~\cite{chuehong-et-al:2015}.
 \end{compactdesc}
 
 \section{Intro}
@@ -72,9 +85,6 @@ binaries. One plan for the prototype is to have the BMA compile and be
 tested using this mechanism, as a proof of concept.
 
 
-Pull together WSSSPE2~\cite{crick-et-al_wssspe2} and Recomp2014~\cite{crick-et-al_recomp2014}. 
-
-
 After the last submission, I have been thinking about the relationship
 between the two papers. I was glad to have written the second one as I
 felt it was really the second half of the first; one said that
@@ -82,16 +92,13 @@ implementation was hard, whereas the second was focused on how models
 themselves might limit reproducibity efforts. I would like this
 manuscript to bridge both of these topics, and particularly I'd like
 to address the CI system aspects. So, roughly I'd hope that the paper
-would read in 3 sections
+would read in 3 sections:
 
- 
-
-1) Implementation problems. Expand to include broader topics in the
+ \begin{itemize}
+\item Implementation problems. Expand to include broader topics in the
 literature (e.g. the machine learning reference I sent around)
 
- 
-
-2) Models/benchmarks. To be frank, I'd like to be more direct
+\item Models/benchmarks. To be frank, I'd like to be more direct
 addressing performance based benchmarks here than we were in the
 previous paper. Whilst I realize this is hard on the cloud, the more I
 have thought about it I don't think counting operations (as suggested)
@@ -99,9 +106,7 @@ makes much sense- plus Samin and I have an example from a recent paper
 (Samin- our CAV paper) where counting operations on a small benchmark
 set wrongly indicated efficiency.
 
- 
-
-3) The system itself. I don't know what your thoughts are, but I
+\item The system itself. I don't know what your thoughts are, but I
 wonder if it would be possible to set up a simple piece of software,
 with a couple of dependencies, just to show what it looked like. We
 just decide on an analysis (I can suggest some simple ones), write a
@@ -111,8 +116,7 @@ example of a tool that might be appropriate could be a protein
 structure analysis called the Gaussian Network Model. Its easy to
 implement (and I've done it a few times), and could be linked to the
 PDB for a set of tests/benchmarks.
-
-
+\end{itemize}
 
 
 
@@ -129,8 +133,6 @@ reproducibility studies explicitly encouraged.)  Probably best to
 archive them and put the details online, and put data in the
 paper. Should be sensible and reasonable sized sample (e.g. all ACM
 journals, journals in some other sensible ranking).
-
-(cite to check bib~\cite{crick-et-al_wssspe2})
 
 \begin{itemize}
 
