--- a/reproducibilityCACM.tex
+++ b/reproducibilityCACM.tex
@@ -37,12 +37,25 @@
 \maketitle
 
 \begin{abstract}
-Reproducibility is a key tenet of all modern sciences.  Unfortunately
-the current state of reproducibility in computational sciences is
-lamentable.  We propose that journals in computational sciences should
+Reproducibility is a key tenet of all modern sciences. The computational
+sciences uniquely have an opportunity to address reproducibility in ways
+not available to other disciplines; namely through the sharing of digital
+artefacts generated in our research. Whilst an experimental protocol can 
+only be reimplemented from its specification, computational sciences
+have the opportunity to share both the specification and the implementation,
+allowing more powerful tests of reproducibility. Here we propose two advances
+that would improve the current state of reproducibility; a technical solution
+for testing and re-testing build processes and model outcomes, and increasing 
+the standards reported specifications for scientific projects to ease 
+reimplementation.
+
+%Unfortunately
+%the current state of reproducibility in computational sciences is
+%lamentable.  
+We further propose that journals in computational sciences should
 encourage papers reproducing (or failing to reproduce) earlier work in
-their field, by establishing clear criteria for assessing
-reproducibility papers.
+their field, through the establishment of \emph{reproducibility papers}
+where algorithms are explicitly reimplemented \emph{de novo} and tested.
 \end{abstract}
 
 
